@@ -14,26 +14,26 @@ EBUILD mpv-0.3.10.ebuild 6420 SHA256 08c56a8e201a818067b041f6d8a7d1a4c2658c0887f
 EBUILD mpv-0.3.11-r1.ebuild 6516 SHA256 9bc6b73068dfb359185d719c1e002488095798b517daa63e4c58fa960ff98595 SHA512 3e7b68340bf823e844825b7100ef20e0c317d96eb3229f2cb000849cfce9b4c83a1a13d022f6f0bddd8b6d7277328a8020b92b09dcfecf3d1ef6ab301e04103f WHIRLPOOL 657261b5b8c050a6ab1dfcf36322218af05880602273feb346404bdcb5da42c2e66a3cec00b02f4cf3559990580caa17c4c66fa9cfbada0d542c41dd41414e47
 EBUILD mpv-0.7.3.ebuild 6900 SHA256 ffd0b01b8980e8201353f0c8ff4d8c960635130b9a56e8b2af41e8fff6c8214f SHA512 94932c1ac7d0f6e1e0d848fe6818c13417a1b88ad2b10735e6ab4fabaa9d723fb22c9caecc01b3c2bde57696455f4daf5985e3428279a2ec96186dd8d6295eb3 WHIRLPOOL 7e6429bdcef56a29587ab697a63bbfc4d74b667aae814cc5294ebcfd1000acb45f8f4109b839c07fdb4c8d657fcd2f5d9e28bddbbb8da3fc564d13619dd1d082
 EBUILD mpv-0.8.0.ebuild 6659 SHA256 26f7c80686cb47a68eb180af15f3d96ee8540cbf07973e390db848659536d711 SHA512 986fb15ef750ebe2fd5cc2b3d425dca7964aa30e7fb2723854002e04dbf778d11ebcf7be30f6063eb831d468d9c5c60c5fcd518023de99efcbea3edf917ebbf8 WHIRLPOOL 783a98e2374d26aa3ba05951bb9cc46a143842aad7e6c0f9139a7cbcb54886d827a40c4e6d7f4a84948141a350ccff4579c646d70d99de805eebbb30a0fc13f8
-EBUILD mpv-0.8.2.ebuild 6661 SHA256 35af06e3d7aa8b6266211799cf54f9d9861825eef4452d069bbbb52f2ae67d27 SHA512 fac03871386b836b305dc794c93b1c6d6759db6e56572f5c7031a28aa6a880bd30fad17cacf86692ae812f3827acdf5ef03d4224205f135b392f66a5976ef9f9 WHIRLPOOL 6d98c64153ad60bb9bdc4cb7fbb5f5f5cc84e0f867b1cd5f20e1bc49327612bdfcf1fa4f10f2644dccf48b86911d1a4ae7a06176d0a7eff49a1a19df4556b175
+EBUILD mpv-0.8.2.ebuild 6675 SHA256 7c4b68bdf7afa67d9040c1a48a5ccabbc61ff62a21193d3c5624c1b8906e9879 SHA512 2a239b4c020143bd2d3478b464d4a9dc6003b8a9645f724ed03c36808c4c11893ca4b4314ba8fe652414e9f27015ee874274c4fae411454de62a9e9883163261 WHIRLPOOL 54d9df78f6d2018cc1947e8729841d54e704df741774934c7fbec14822ee7598993fedd38e689e174af3d02e42fd353595bdc5be8ab632a6a2f68622e2247b2b
 EBUILD mpv-9999.ebuild 6619 SHA256 64b5b4ffb8ebd94422e45c66af10a9ae89cd1fa3a80986cf5db0facbb9a81d03 SHA512 82299c5c3b78ef52329ebf04f36d1676ac9d26cd307fc5154b38398867eaebf868c37e561f889d26433f76c37bebdcb9f8fbe224c784771e8434eecb61a07e1c WHIRLPOOL 46bf9fa7e93896c9135bf292d6239a816568059d1e8fb3088c55c35436ba627ec43685768518709e4a33e7a9c6c1c0a4466bd126195d8ad8051a72485af610af
-MISC ChangeLog 18820 SHA256 060b0ed24116f9cd25afe1a69415627aed0a0abffdd54eea4f485d99b623fef8 SHA512 0d9f5e9778571f5d57846cd3d66c47427a42c0e44141409114e70a9fcbd3f7bd0785df9e4daad1a254e305ab093ff9104dd2a6130475bbaa32f0ac36f53ac8fd WHIRLPOOL 6b5b11ee54d9ea19b21fa737cb3645626e4c6f7cdb8f15e1222f80df4d0c46bc010b36a3ddf9c94d96608e2b9e37b3efc34e7c6682a43dd41553c1b1807408a0
+MISC ChangeLog 18929 SHA256 5d49534abdc50113da2b29c8cdf4ff2003ab5b531cf7064e49d3bfbbb5dea922 SHA512 7149df8298585ed3e827148e00d50a33167984112c9b9a60763cd5dd87fe02c4c1b509d7292e22a38df0e1bcaaf9515bd059a4ca704c0b6c885a5c695e78e8c5 WHIRLPOOL e9056159253e0c66f3920c9668381d3d4ea5b8cd3d05b2ebbe1879130722f486684615f3db1abb898cd97f4865c68ee2c9b54bf482d55445479ffbdb65b1d9cf
 MISC metadata.xml 2021 SHA256 142021b8f3982ba79c8fd8e44f755005b8aaf77795e612ef572a3f56e6af555d SHA512 55a5df91a31d13ffbab5b4573f34b9d1c839044cd38fe9d17419feb1b1e1d3e3412a16a39cb6037859842c4710151734c60a77b10f1229ebe976769aa0dce233 WHIRLPOOL 0f5581743746946063daaa567e2ae0cddd46e75b31ea5e92c1ff275461541b9bd1b530b3de02ee0db9210beb2fbdfe52e5b9da72234f5a298da0c8da9a7d4c04
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0
 
-iQJ8BAEBCABmBQJU+Gb3XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ8BAEBCABmBQJU+oxiXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ5MTlDREQ0NUU5Mjc4RkU2RjJDNTAyNzU0
-RkRGOUNGRDJGQUM1MTRFAAoJEE/fnP0vrFFOjnMP/31LtAyn4ap03udtdLaNnVtU
-iQaT2XuVHdiL+TilR8a/bB6yRTfyeY7vqACjan7TLmbetYRa5m/kWJ8KYGz+6YrX
-UfvLsING1UZHQ29nF9mxTmVnSeOe5SzJYPPhtCcRrRZRlIQLEAE2iOwPuyXBzMo9
-etYJIg8e72UWDuBQfdH3w0QEp5MOiaOyTlVN8xuYmy+9SwCovCa035ZNRoPpnH8a
-qnjj98nx1hfKDKtXIg/NN+njurxFHKomnnLE4ZRdqU5yByScVR0u4sdN75Duvhix
-PiaD7D6j2mbDmnCZZ0x4yd67Dk7iI37VaCnqBSKGmNIXm4xccpq7SZeC/+o6fNhZ
-xmC56ktw5PcBuEJTQIccfLPVGNF1onE76fOAkxjM6kWPXU/ydTKDtn44mjbUfB3E
-z7T0jUEpSjtrWsS62NJm7jZwgSsMxQr910Bi0rk0wiAVCHUFPDl/3bZBGED7Ales
-DINxbNlgx5BtadecHDO8npCfnONqk+Kz3He5GhQxqXyelobBQqq+wXRmusGYqC63
-n4OMthg0/GLSuEqDueDV/W3+PX1TcyNWmyHnO3Pa0saAHvXWMaSsZFMNEB0mm40x
-USiyNj4SRBq/Iy9L/jbsllBKxlPB6PXJkG499C/hIGHpikC+6DYWc3nOu48DJLS6
-rE9looREiklCfKBnuy2q
-=a4Fv
+RkRGOUNGRDJGQUM1MTRFAAoJEE/fnP0vrFFOug4P+wbyOhwqRt9jkdNDlY0vtbQ0
+sRtdcQ29mf+UK1KtHExkBXKT40Pxev932tgOqJzraiaqaWKjIqjNS/m3kV5oeUNZ
+ww7EiQe69EyYcOiFeUOjjKR3W4VXa9G6Ir6hadEdTE6R1bpJw/CHdsJS4+kUjcUX
+3aEKrp8W/GwlNSDxKZrj8uHXIksXewv8pO8cQhjdlPFlEEkzukhRrYLnTk5pLLqF
+1Sv/kv+ygsb3s8SXOsS/DrC9OiCJLdCgcZ4ZhT42AAPe8jtT6FWaWohoaip3r6kL
+UrkxZc/x1EvwyXWIOz7dtilYM8bc9gbANjSc1HRqR+3E41sMs4eQYTJxvUTH62eL
+ZRoVEja7BsT2XuI49bQCjTrALn+/67QP/whwsheFMXDnJnnHrSZDH+TV0W3T0ayh
+ZRrRg9cPR99wOlWJ+KSpURsFrG2AHIGDxuMui+C/0co1y1WQd4BzXhOa6EzwssU7
+b/aQwFXBNne3mLbT/UL2tKGDssaS9YgQNKX0ZpM4U/A69l9pbpuwW7pJBPhFHIoL
+n0DgqWLqTjJgoHseJkRSYO0elLG+Vi2SznsuN8q6aBWDaOGKgIzenKPcL+UO6QCJ
+oLh9LmKEpvlxqW2YvPqDyYa7LROU6nUQ4OOeCrwPk+lRo75lxuAayPrdcieDjSYN
+U6TuLZTOzZMaU0RwFmHh
+=i1Xf
 -----END PGP SIGNATURE-----
